assets/css/style.css
/* Import Google fonts */

@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&family=Source+Sans+Pro:wght@300&display=swap');

/* Set initial values */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* html,
body {
    height: 100%;
} */

input,
button {
    font-family: 'Source Sans Pro', sans-serif;
    color: black;
    font-weight: bold;
    border: none;
    outline: none;
}

/* Background */

body {
    /* width: 90%; */
    margin: auto;

    background-image: linear-gradient(to bottom, #ff99c8, #fcf6bd, #d0f4de, #a9def9, #e4c1f9);
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
    color: black;
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 18px;
}


/* header */

header {
    width: 90%;
    margin: 60px auto 20px;
    padding: 10px 0px;

    display: flex;
    align-items: center;
    justify-content: center;
}

#name {
    background-color: transparent;
    font-size: 28px;
    font-family: 'Quicksand', sans-serif;
}

#rainbow {
    width: 50px;
    height: 50px;
}

h1 {
    font-family: 'Quicksand', sans-serif;
    font-size: 28px;
    text-align: center;
    text-shadow: 1px 2px #d0f4de;
}

/* Form section */

#form-div {
    width: 90%;
    margin: 20px auto;

    display: flex;
    justify-content: center;
}

form {
    display: flex;
    justify-content: center;
}

/*  Input field*/

#todo-input {
    width: 90%;
    padding: 10px;
    background: linear-gradient(to top, rgba(255, 153, 200, 0.5), rgba(252, 246, 189, 0.5), rgba(208, 244, 222, 0.5), rgba(169, 222, 249, 0.5), rgba(229, 195, 249, 0.5));
    border-radius: 20px 0px;
    border: 1px solid #483e4e;
    font-size: 18px;
    flex: 1;
}

#todo-input:focus,
#todo-input:hover {
    border: 1.5px solid #483e4e;
    box-shadow: inset 0 2px 10px #ff99c8;
}

#todo-btn img {
    width: 35px;
    height: 35px;
    margin: 2px;
}

/* buttons */

button {
    cursor: pointer;
    background: none;
}

.edit-btn {
    background-image: url(../images/edit.png);
}

.save-btn {
    background: url(../images/save.png);
}

.check-btn {
    background: url(../images/check.png);
}

.delete-btn {
    background: url(../images/delete.png);
}

.reopen-btn {
    background: url(../images/refresh.png);
}

.edit-btn,
.save-btn,
.check-btn,
.delete-btn,
.reopen-btn {
    margin: 1px;
    width: 25px;
    height: 25px;

    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
}

/* Button bounce on hover from https://github.com/IanLunn/Hover */

button {
    transform: translateZ(0);
    transition-duration: 0.3s;
    transition-property: transform;
    transition-timing-function: ease-out;
}

button:hover,
button:focus,
button:active {
    transform: scale(1.1);
    transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
}

/* ToDo Section */


#empty {
    padding: 10px;
    text-align: center;
}

#empty img {
    width: 50px;
    height: 50px;
}

p {
    font-family: 'Quicksand';
    font-style: italic;
}

h2 {
    font-size: 20px;
    text-align: center;
    color: #483e4e;
}

#todo-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#todo-list,
#todo-done {
    width: 100%;
}

.elem {
    margin: 5px 0;
    padding: 5px 0;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

.elem * {
    display: flex;
    justify-content: center;
}

.todo-item {
    margin-left: 2.5px;
    padding: 7.5px 0;
    background: linear-gradient(to bottom, rgba(255, 153, 200, 0.8), rgba(252, 246, 189, 0.8), rgba(208, 244, 222, 0.8), rgba(169, 222, 249, 0.8), rgba(229, 195, 249, 0.8));
    border-radius: 5px 10px;
    text-align: center;
    border: 1px solid #483e4e;
    font-size: 16px;
    /* flex: 1; */
}

.lead-img {
    width: 30px;
    height: 30px;
    padding: 0;
}

.stamp {
    text-align: right;
    padding-right: 20px;
}

.stamp p {
    font-size: 14px;
}

/* Clock */

#clock {
    position: absolute;
    top: 20px;
    right: 20px;
}

#clock p {
    font-weight: bold;
    font-size: 18px;
    text-shadow: 1px 0px 1px #d0f4de;

}

/* Footer */

footer {
    width: 100%;
    position: fixed;
    bottom: 0;
    left: 0;

    background: linear-gradient(to top, rgba(255, 153, 200, 1), rgba(252, 246, 189, 1));

    display: flex;
    flex-direction: column;
    justify-content: center;
}

ul {
    display: flex;
    justify-content: center;
}

li {
    list-style-type: none;
    padding: 5px;
}

footer p {
    padding: 2px 0 10px;
    text-align: center;
    font-size: 14px;
}

i {
    transform: scale(1.2);
    padding: 2px;
    cursor: pointer;
    color: black;
}

i:hover {
    transform: scale(1.5);
    color: #71627a;
}

a {
    cursor: pointer;
    text-decoration: none;
}

a:hover {
    color: #d0f4de;
}

/* Media screens */

@media screen and (max-width: 320px) {
    .todo-item {
        font-size: 14px;
    }
}

@media screen and (min-width: 380px) {
    h1 {
        font-size: 32px;
    }

    form {
        width: 80%;
    }

    #todo-list,
    #todo-done {
        width: 80%;
    }

    #todo-input {
        font-size: 20px;
    }

    .todo-item {
        flex: 1;
        font-size: 18px;
    }
}

@media screen and (min-width: 520px) {
    .lead-img {
        width: 35px;
        height: 35px;
    }

    #todo-list,
    #todo-done {
        width: 80%;
    }

    .edit-btn,
    .save-btn,
    .check-btn,
    .delete-btn,
    .reopen-btn {
        margin: 2px;
        width: 30px;
        height: 30px;
    }

}

@media screen and (min-width: 780px) {
    header {
        margin: 100px 0px 40px;
    }

    h1 {
        font-size: 40px;
    }

    form {
        width: 600px;
    }

    #todo-list,
    #todo-done {
        width: 650px;
    }
}

